bases/default/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    k0s.reynn.net/resource-profile: deluxe
    k0s.reynn.net/host: mimikyu
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http-ui
              containerPort: 8096 #is used by default for HTTP traffic. You can change this in the dashboard.
              # hostPort: 8096
            - name: https-ui
              containerPort: 8920 #is used by default for HTTPS traffic. You can change this in the dashboard.
              # hostPort: 8920
            - name: udp-svc-auto
              containerPort: 1900 #is used for service auto-discovery. This is not configurable.
              # hostPort: 1900
              protocol: UDP
            - name: udp-auto
              containerPort: 7359 #is also used for auto-discovery. This is not configurable.
              # hostPort: 7359
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: http-ui
            initialDelaySeconds: 10
            timeoutSeconds: 2
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: http-ui
            initialDelaySeconds: 10
            timeoutSeconds: 2
            successThreshold: 5
          volumeMounts:
            - name: media
              mountPath: /media/deadpool
            - name: jellyfin
              mountPath: /config
            - name: metadata
              mountPath: /config/metadata
            - name: config
              mountPath: /config/config
            - name: data
              mountPath: /config/data
            - name: jellyfin-root
              mountPath: /config/root
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: media
          hostPath:
            path: /media/deadpool/
            type: Directory
        - name: metadata
          hostPath:
            path: /media/server/jellyfin/metadata
            type: Directory
        - name: config
          hostPath:
            path: /media/server/jellyfin/config
            type: Directory
        - name: data
          hostPath:
            path: /media/server/jellyfin/data
            type: Directory
        - name: jellyfin
          hostPath:
            path: /media/server/jellyfin/
            type: Directory
        - name: jellyfin-root
          hostPath:
            path: /media/server/jellyfin/root
            type: Directory
