bases/default/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - name: tcp
      nodePort: 30896
      port: 8096
